--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,9 @@ services:
     ports:
       - '8888:8888'
     volumes:
-      # - "./notebooks:/home/student/notebooks"
-      - "./work:/home/jovyan/notebooks"
-    privileged: true
+      - "./notebooks:/home/jovyan/notebooks:z"
     environment:
       GRANT_SUDO: "yes"
-    command: start.sh jupyter lab --NotebookApp.token=''
+    command: start.sh jupyter lab --NotebookApp.token='' --NotebookApp.iopub_data_rate_limit=100000000
+
 
